# cclens

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cclens/: __init__.py  cli.py
src/cclens/analyzers/: productivity.py  skills.py  tokens.py  trends.py
src/cclens/dashboard/: generator.py
src/cclens/dashboard/templates/: dashboard.html
src/cclens/parsers/: jsonl.py
