[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cclens"
version = "0.1.0"
description = "Analyze Claude Code session data and generate HTML dashboards"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "jhkwak" }]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
]

[project.scripts]
cclens = "cclens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cclens"]
